<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alexkdawson.cssdswat.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/title_main"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:text="@string/swat"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Button
                android:id="@+id/settings_button_main"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_settings_white_48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/pitt_information_technology"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
        app:srcCompat="@drawable/cssd_logo" />

    <EditText
        android:id="@+id/buildingEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/building_name_prompt"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLogo"
        android:importantForAutofill="no" />

    <Button
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/beginSessionButton"
        android:text="@string/start_swating"
        app:layout_constraintTop_toBottomOf="@id/buildingEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/continueSessionButton"-->
        <!--android:text="Load Previous SWAT"-->
        <!--app:layout_constraintTop_toBottomOf="@id/beginSessionButton"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"/>-->

    <RadioGroup
        android:backgroundTint="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@id/beginSessionButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/which_network"
            android:textColor="@android:color/black"/>
        <RadioButton
            android:buttonTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wireless_pittnet"/>

        <RadioButton
            android:buttonTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wireless_pittnet_fast"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/myresnet" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/myresnet_legacy" />

        <RadioButton
            android:buttonTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"/>

    </RadioGroup>
</android.support.constraint.ConstraintLayout>
